tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Compiler-virtual-machine-interpreter' based on the file name 'compiler-virtual-machine-interpreter.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(139,70): error FS0001: This expression was expected to have type
    'a []    
but here has type
    string    

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(170,36): error FS0001: The type 'obj' is not compatible with the type 'seq<'a>'

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(171,68): error FS0001: This expression was expected to have type
    string    
but here has type
    int    

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(179,27): error FS0001: This expression was expected to have type
    int    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(180,48): error FS0039: The value or constructor 'slice' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(184,75): error FS0001: This expression was expected to have type
    int    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(189,48): error FS0039: The value or constructor 'slice' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(197,48): error FS0039: The value or constructor 'slice' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(202,48): error FS0039: The value or constructor 'slice' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(204,76): error FS0001: This expression was expected to have type
    string    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(209,72): error FS0001: This expression was expected to have type
    string    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(212,70): error FS0001: This expression was expected to have type
    string    
but here has type
    int    

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(213,48): error FS0039: The value or constructor 'slice' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/compiler-virtual-machine-interpreter.fs(222,48): error FS0039: The value or constructor 'slice' is not defined
